# invenio-remote-api-provisioner

./: .gitignore  INSTALL.rst  MANIFEST.in  Pipfile  README.md  VERSION  authors.rst  pyproject.toml  setup.cfg  setup.py
invenio_remote_api_provisioner/: __init__.py  components.py  config.py  ext.py  queues.py  signals.py  tasks.py  utils.py
tests/: __init__.py  conftest.py  test_remote_api_provisioner.py
tests/helpers/: api_helpers.py  fake_datacite_client.py  utils.py
