# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 MESH Research
#
# invenio-groups is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
version = attr: invenio_remote_api_provisioner.__version__

[options.entry_points]
invenio_base.apps =
    invenio_remote_api_provisioner = invenio_remote_api_provisioner.ext:InvenioRemoteAPIProvisioner
invenio_base.api_apps =
    invenio_remote_api_provisioner = invenio_remote_api_provisioner.ext:InvenioRemoteAPIProvisioner
invenio_celery.tasks =
    invenio_remote_api_provisioner = invenio_remote_api_provisioner.tasks

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_remote_api_provisioner

[pydocstyle]
add_ignore = D401